# STOP-utils

./: .readthedocs.yaml  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
notebook/: load_external_wfe.ipynb  polyorthonorm_decomposition.ipynb  zemax_wfe.ipynb
stop_utils/: __init__.py  cli.py  converters.py  types.py  visualization.py  wfe_analysis.py
stop_utils/zemax/: wavefront_extractor.py  zemax_wfe.py  zmx_batch_processor.py  zmx_boilerplate.py
tests/: __init__.py  conftest.py  test_cli.py  test_converters.py  test_visualization.py  test_wfe_analysis.py
